src/Styles/Landing.css
/* Landing */
.Landing {
    position: relative;
    width: 100%;
    height: 100vh;
    border-bottom: 1px solid var(--accent-clr);
    box-shadow: var(--shadow-bottom);
}
.Landing .landing_Container {
    width: 100%;
    height: 100%;
}


/* Banner Image */
.Landing .landing_Container .banner {
    width: 100%;
    height: 100%;
}
.Landing .landing_Container .banner img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}
/* Image Overlay */
.Landing .landing_Container .banner .img-overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.448);
}


/* Banner Text */
.Landing .landing_Container .banner-text_Container {
    position: absolute;
    top: 20%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-image: linear-gradient(
        rgba(0, 0, 0, 0),
        rgba(0, 0, 0, 0.2),
        rgba(0, 0, 0, 0.4),
        rgba(0, 0, 0, 0.8),
        rgba(0, 0, 0, 0.8),
        rgba(0, 0, 0, 0.8),
        rgba(0, 0, 0, 0.8),
        rgba(0, 0, 0, 0.4),
        rgba(0, 0, 0, 0.2),
        rgba(0, 0, 0, 0)
    );
    height: 40%;
    width: 100%;
}
.Landing .landing_Container .banner-text_Container h2 {
    font-size: 3.5em;
}
.Landing .landing_Container .banner-text_Container h2 .title-accent-clr {
    color: var(--accent-clr);
}
.Landing .landing_Container .banner-text_Container h3 {
    font-size: 1.4em;
    color: var(--accent-clr);
}

.Landing .landing_Container .banner-text_Container .call-to-action_Container {
    display: flex;
    flex-direction: row;
    text-align: center;
    gap: 15px;
}
.Landing .landing_Container .banner-text_Container .call-to-action_Container .button:last-child {
    display: none;
}




/* Media Queries */
@media all and (max-width: 945px) {
    .Landing .landing_Container .banner-text_Container .call-to-action_Container .button:last-child {
        display: inline-block;
    }
}

@media all and (max-width: 500px) {
    .Landing .landing_Container .banner-text_Container h2 {
        font-size: 3em;
    }
    .Landing .landing_Container .banner-text_Container h3 {
        font-size: 1.2em;
    }
}

@media all and (max-width: 400px) {
    .Landing .landing_Container .banner-text_Container h2 {
        font-size: 2.8em;
    }
    .Landing .landing_Container .banner-text_Container h3 {
        font-size: 1.1em;
    }
}

@media all and (max-width: 355px) {
    .Landing .landing_Container .banner-text_Container h2 {
        font-size: 2.6em;
    }
    .Landing .landing_Container .banner-text_Container h3 {
        font-size: 1.0em;
    }
}

